controllo issues cli